tests/snapshots/add_query__query_after_add.snap
---
source: tests/add_query.rs
info:
  program: frecency
  args:
    - query
    - "--now"
    - "0001-01-01T02:00:00Z"
    - "--db-path"
    - /tmp/frecency-hfCOxT/test_add_query.db
---
success: true
exit_code: 0
----- stdout -----
10.988235294117647	key

----- stderr -----
